plugins {
    id 'java-library'
}

group 'io.jochimsen'

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    implementation group: 'io.netty', name: 'netty-all', version: '4.1.15.Final'
}
